<resources>
    <string name="app_name">BabyBuy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="font_family">Codec Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="profile_image">Default Image</string>
    <string name="logout">Log Out</string>

    <string-array name="product_categories">
        <item>Clothes</item>
        <item>Food</item>
        <item>Toys</item>
        <item>Hygiene</item>
        <item>Skin</item>
    </string-array>

    <string name="user_phone">User Phone</string>
    <string name="user_address">User Address</string>

</resources>