<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.ProfileFragment">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/profile_image"
        android:src="@mipmap/blank_profile"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="H,1:1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivProfileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/card_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="20sp"
                android:textStyle="bold"

                android:textColor="@color/black"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:textSize="18sp"
                android:textColor="@color/text_secondary_color"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/tvUserPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone"
                android:textSize="18sp"
                android:textColor="@color/text_secondary_color"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:id="@+id/tvUserAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_address"
                android:textSize="18sp"
                android:textColor="@color/text_secondary_color"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"

        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_thin"
        android:backgroundTint="@color/btn_color"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="@id/ivProfileImage"
        app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"/>
</androidx.constraintlayout.widget.ConstraintLayout>
